<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TcoDesignerPlcToPc_v_2_x_x" Id="{a159f660-9f8a-0d5f-3e30-4941e230918a}">
    <Declaration><![CDATA[{attribute wpf [Container(Layout.Stack)]}
TYPE TcoDesignerPlcToPc_v_2_x_x : STRUCT
    {attribute wpf [Container(Layout.Stack,"Control")]}
    {attribute addProperty Name "<#Trigger#>"}
    Trigger : BOOL;
    {attribute addProperty Name "<#ResultsAck#>"}
    ResultsAck : BOOL;
    {attribute addProperty Name "<#Reset#>"}
    Reset : BOOL;
    {attribute addProperty Name "<#JobLoadId#>"}
    JobLoadId : UINT;
    {attribute addProperty Name "<#LoadJob#>"}
    LoadJob : BOOL;
    {attribute addProperty Name "<#ClearResults#>"}
    ClearResults : BOOL;
    {attribute addProperty Name "<#Timeout[ms]#>"}
    Timeout : UINT;
    {attribute addProperty Name "<# PartId #>"}
    PartId : STRING; //napr. DMC Code
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>